# csnp-retail-platform

./: .env.example  .gitignore  LICENSE  README.md  csnp_dataset_design.md  csnp_production_build_plan.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
deploy/: __init__.py  auth.py  deploy.py
docs/: bronze_path_convention.md  helpers_workflow.md
fabric/: parameter.yml
fabric/CSNP_Bronze.Lakehouse/: .platform
fabric/CSNP_Gold.Lakehouse/: .platform
fabric/CSNP_Silver.Lakehouse/: .platform
fabric/csnp_env.Environment/: .platform
fabric/nb_01_generate.Notebook/: .platform  notebook-content.py
fabric/nb_02_bronze_validate.Notebook/: .platform
fabric/nb_03_silver_merge.Notebook/: .platform  notebook-content.py
fabric/nb_04_gold_dims.Notebook/: .platform  notebook-content.py
fabric/nb_04_silver_dim_geography.Notebook/: .platform  notebook-content.py
fabric/nb_05_gold_facts.Notebook/: .platform  notebook-content.py
fabric/nb_05_silver_dim_store.Notebook/: .platform  notebook-content.py
fabric/nb_06_dq_checkpoint.Notebook/: .platform  notebook-content.py
fabric/nb_06_silver_dim_campaign.Notebook/: .platform  (+1 more)
generator/: pyproject.toml
generator/src/csnp_retail/: __init__.py  __main__.py  cli.py  config.py  daily.py  faker_pools.py  io.py  manifest.py  patterns.py  runner.py  validators.py
generator/src/csnp_retail/entities/: dim_campaign.py  dim_channel.py  dim_customer.py  dim_date.py  dim_geography.py  dim_product.py  dim_return_reason.py  dim_store.py  fact_inventory_daily.py  fact_loyalty_events.py  fact_marketing_spend.py  fact_returns.py  fact_sales.py  fact_sessions.py
generator/tests/: conftest.py
generator/tests/integration/: test_backfill_xs.py  test_daily_continuity.py  test_daily_determinism.py  test_late_arrivals.py
generator/tests/patterns/: test_placeholder.py
generator/tests/unit/: test_dim_campaign.py  test_dim_channel.py  test_dim_customer.py  test_dim_date.py  test_dim_geography.py  test_dim_product.py  test_dim_return_reason.py  test_dim_store.py  test_fact_inventory_daily.py  test_fact_loyalty_events.py  test_fact_marketing_spend.py  test_fact_returns.py  test_fact_sales.py  test_fact_sessions.py  test_manifest.py  test_seeds.py
helpers/: pyproject.toml
helpers/src/csnp_helpers/: __init__.py  lineage.py  merge.py  onelake.py  validation.py
helpers/tests/: test_onelake.py  test_public_api.py
scripts/: build_helpers.sh  upload_to_bronze.py
(+30 files in other folders)
