[project]
name = "csnp-platform"
version = "0.1.0"
description = "CSNP & Co. retail data platform — generic Fabric deployment infrastructure"
requires-python = ">=3.11"
dependencies = [
    "azure-storage-file-datalake>=12.0",
]

[project.scripts]
csnp-deploy = "deploy.deploy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deploy"]

[tool.uv.workspace]
members = ["generator", "helpers"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "azure-identity>=1.15",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "pytest-dotenv>=0.5",
    "fabric-cicd>=1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
env_files = [".env"]
markers = [
    "fabric_integration: tests that hit the live Fabric REST API (requires .env, slow)",
]
addopts = ["-v", "--tb=short", "-m", "not fabric_integration"]
