[project]
name = "csnp-retail"
version = "0.1.0"
description = "CSNP & Co. synthetic retail data generator"
authors = [{ name = "Chiranjeevi Bhogireddy", email = "chaitubhogireddy@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pandas>=2.2",
    "pyarrow>=16",
    "faker>=25",
    "numpy>=1.26",
    "holidays>=0.46",
]

[project.scripts]
csnp-retail = "csnp_retail.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csnp_retail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "W"]
ignore = ["E501"]
