[project]
name = "csnp-helpers"
version = "0.1.1"
description = "Shared PySpark helpers for CSNP Fabric silver/gold notebooks"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csnp_helpers"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "W"]
ignore = ["E501", "N812"]
